add socket scripts and input fields

--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,9 @@ sysinfo.txt
 
 # Crashlytics generated file
 crashlytics-build.properties
+/.idea/.idea.Mobile/.idea/.gitignore
+/.idea/.idea.Mobile/.idea/encodings.xml
+/.idea/.idea.Mobile/.idea/indexLayout.xml
+/.idea/.idea.Mobile/.idea/misc.xml
+/.idea/.idea.Mobile/riderModule.iml
+/.idea/.idea.Mobile/.idea/vcs.xml
